--- a/src/MinimalEndpointResult.AspNetCore.Mvc/MinimalEndpointResult.AspNetCore.Mvc.csproj
+++ b/src/MinimalEndpointResult.AspNetCore.Mvc/MinimalEndpointResult.AspNetCore.Mvc.csproj
@@ -5,11 +5,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\EndpointResult\EndpointResult.csproj" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.2.5" />
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.2.5" />
+    <ProjectReference Include="..\MinimalEndpointResult\MinimalEndpointResult.csproj" />
   </ItemGroup>
 
 </Project>
