--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -2,7 +2,7 @@ name: Publish MinimalEndpointResult
 
 on:
   push:
-    branches: [ main ]
+    branches: [ main,cicd ]
   pull_request:
     branches: [ main ]
 
