--- a/src/MinimalEndpointResult/MinimalEndpointResult.csproj
+++ b/src/MinimalEndpointResult/MinimalEndpointResult.csproj
@@ -2,12 +2,12 @@
 
     <PropertyGroup>
         <TargetFramework>netstandard2.1</TargetFramework>
-        <PackageVersion />
+        <PackageVersion>2.0.0-alpha2</PackageVersion>
         <Title>MinimalEndpointResult</Title>
         <Authors>Jake Carpenter</Authors>
         <Description>Result type for commands that can be easily translated into HTTP result responses.</Description>
         <PackageProjectUrl>https://github.com/jake-carpenter/minimal-endpoint-result/</PackageProjectUrl>
-        <PackageLicenseUrl>https://github.com/jake-carpenter/minimal-endpoint-result/blob/main/LICENSE</PackageLicenseUrl>
+        <PackageLicenseExpression>MIT</PackageLicenseExpression>
     </PropertyGroup>
 
     <ItemGroup>
