--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -30,3 +30,4 @@ jobs:
       with:
         PROJECT_FILE_PATH: src/MinimalEndpointResult/MinimalEndpointResult.csproj
         NUGET_KEY: ${{secrets.NUGET_API_KEY}}
+        VERSION_FILE_PATH: src/MinimalEndpointResult/VERSION
