--- a/src/MinimalEndpointResult.AspNetCore.Mvc/MinimalEndpointResult.AspNetCore.Mvc.csproj
+++ b/src/MinimalEndpointResult.AspNetCore.Mvc/MinimalEndpointResult.AspNetCore.Mvc.csproj
@@ -1,7 +1,13 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net5.0</TargetFramework>
+    <TargetFramework>netstandard2.1</TargetFramework>
+    <PackageVersion>0.1.0-alpha1</PackageVersion>
+    <Title>MinimalEndpointResult.AspNetCore.Mvc</Title>
+    <Authors>Jake Carpenter</Authors>
+    <Description>Convert result type from MinimalEndpointResult to IActionResult</Description>
+    <PackageProjectUrl>https://github.com/jake-carpenter/minimal-endpoint-result/</PackageProjectUrl>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
   </PropertyGroup>
 
   <ItemGroup>
